# jsk_mbzirc_task3

./: README.md
jsk_mbzirc_board/: CMakeLists.txt  README.md  package.xml
jsk_mbzirc_board/launch/: magnet.launch
jsk_mbzirc_board/scripts/: config.sh  serial_board.py  serial_board.py.backup
jsk_mbzirc_board/src/magnet/: goblin_gopose.cpp
jsk_mbzirc_board/srv/: Magnet.srv
jsk_mbzirc_task3/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_mbzirc_task3/chrony_tools/: README.md  README.md~
jsk_mbzirc_task3/chrony_tools/scripts/: install_chrony.sh
jsk_mbzirc_task3/chrony_tools/templates/: chrony.client.conf  chrony.server.conf
jsk_network_tools/: CMakeLists.txt
jsk_network_tools/config/: task3.rviz
jsk_network_tools/msg/: AgentStatus.msg  Remote_Image.msg  Remote_Joy.msg
jsk_network_tools/scripts/: silverhammer_highspeed_streamer.py  silverhammer_lowspeed_receiver.py  silverhammer_lowspeed_streamer.py
jsk_task3_m100/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_task3_m100/cfg/: Controlparam.cfg  Filterparam.cfg  Filterparam.cfg.m100
jsk_task3_m100/launch/: #jsk_udp.launch#  gettraindata.launch  jsk_mbzirc_task_1.launch  jsk_mbzirc_task_3.launch  jsk_task3_m100.launch  jsk_task3_v.launch  jsk_udp.launch  mbzirc_task3_demo.launch  remotepc.launch
jsk_task3_m100/src/gimbalcontrol/: gimbal_control.cpp
jsk_task3_m100/src/img2pointcloud/: uav_img2pointcloud.cpp  uav_img2pointcloud.cu
jsk_task3_m100/src/multidrone/: multidrone.cpp
jsk_task3_m100/src/task3vision/: task3vision.cpp
jsk_task3_m100/src/teleop/: uav_teleop_joy.cpp  uav_teleop_keyboard.cpp
jsk_task3_m100/src/treasurepick/: uav_treasure_move.cpp  uav_treasure_pick.cpp
jsk_task3_s900/: CMakeLists.txt  README.md  package.xml
jsk_task3_s900/launch/: s900_bringup.launch
