<package>
  <name>jsk_mbzirc_board</name>
  <version>0.0.1</version>
  <description>
    JSK mbzirc board for magnets and laser	
  </description>
  <author>Xiangyu Chen</author>
  <maintainer email="xychen@jsk.imi.i.u-tokyo.ac.jp">xychen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>

</package>


