<?xml version="1.0"?>
<package>
  <name>jsk_task3_m100</name>
  <version>1.0.1</version>
  <description>The task3 DJI M100</description>

  <maintainer email="xychen@jsk.imi.i.u-tokyo.ac.jp">Xiangyu Chen</maintainer>
  <maintainer email="anzai@jsk.imi.i.u-tokyo.ac.jp">Tomoki Anzai</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>dji_sdk_lib</build_depend>

  <run_depend>jsk_mbzirc_board</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dji_sdk_lib</run_depend>
  <run_depend>dji_sdk</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
